accord-dev/templates/accord-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: accord-web
  name: accord-web-service
  namespace: accord
spec:
  ports:
    - name: "accord-web-port"
      port: 80
      protocol: TCP
      targetPort: 4200
  selector:
    app: accord-web
